<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/product_name"
        android:paddingStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/price"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        android:paddingStart="25dp"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/product_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/product_price"
        android:paddingStart="25dp"
        android:layout_margin="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>