<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginfragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/inputemail"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"

            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintVertical_bias="0.17"
             android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:paddingStart="10dp"
            android:fontFamily="sans-serif-condensed"

            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@+id/inputemail"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"

            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:paddingStart="10dp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:id="@+id/forgotPassoword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            android:layout_marginTop="8dp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/forgotPassoword"
            android:text="@string/login"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:background="@drawable/nothing"
            android:layout_marginTop="60dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>