<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">


        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/username"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintVertical_bias="0.14"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:paddingStart="10dp"
            android:fontFamily="sans-serif-condensed"

            />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:hint="Email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:paddingStart="10dp"
            android:fontFamily="sans-serif-condensed"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"

            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:paddingStart="10dp"
            android:fontFamily="sans-serif-condensed"
            />

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:hint="@string/confirm_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:paddingStart="10dp"
            android:fontFamily="sans-serif-condensed"
            />



        <Button
            android:id="@+id/rbutton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/confirmpassword"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:background="@drawable/nothing"
            android:layout_marginTop="40dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</FrameLayout>